Fixed white space on right and bottom edges of screen

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -66,7 +66,7 @@
     top: 0;
     left: 0;
     width:100%;
-    height:150%;
+    height:100%;
     z-index:-2;
 }
 
@@ -852,6 +852,14 @@ ul{
     border-color: var(--theme-borders);
     color: var(--theme-borders);
     background-color: var(--theme-borders);
+}
+
+html,body{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
 }
 /* ==================== IDs ==================== */
 
